--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3183,7 +3183,7 @@ b{
 .eventDivWithMargins{
   margin: 10px 0;
 }
-.promoCode, .mailPrize, .updateText{
+.promoCode, .mailPrize{
   user-select: text;
 }
 
