--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4257,5 +4257,8 @@ select::-ms-expand {
     opacity: 0;
   }
 }
+img, a {
+  -webkit-user-drag: none;
+}
 
 /*# sourceMappingURL=styles.css.map */
