--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3242,6 +3242,10 @@ b{
   font-size: 1.2rem;
   line-height: 1.2rem;
 }
+.shop__tipsCount_advert_small{
+  font-size: 1rem;
+  line-height: 1rem;
+}
 .shop__name_advert{
   margin: 10px 0 0 0;
 }
@@ -3270,6 +3274,10 @@ b{
   .shop__tipsCount_advert{
     font-size: 1rem;
     line-height: 1rem;
+  }
+  .shop__tipsCount_advert_small{
+    font-size: 0.85rem;
+    line-height: 0.85rem;
   }
   .shop__name_advert{
     font-size: 1.2rem;
@@ -3304,6 +3312,10 @@ b{
   .shop__tipsCount_advert{
     font-size: 1.3rem;
     line-height: 1.3rem;
+  }
+  .shop__tipsCount_advert_small{
+    font-size: 1.1rem;
+    line-height: 1.1rem;
   }
   .shop__cart__item_1, .shop__cart__item_2, .shop__cart__item_3, .shop__cart__item_4, .shop__cart__item_5,
   .shop__cart__card .svgIcon{
@@ -3364,6 +3376,10 @@ b{
   .shop__tipsCount_advert{
     font-size: 1.9rem;
     line-height: 1.9rem;
+  }
+  .shop__tipsCount_advert_small{
+    font-size: 1.7rem;
+    line-height: 1.7rem;
   }
   .shop__name_advert{
     margin: 15px 0 0 0;
