--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2080,6 +2080,9 @@ b{
 .chosenBg6{
   background-image: url(../assets/settings/bg6.png);
 }
+.chosenBg7{
+  background-image: url(../assets/settings/bg7.png);
+}
 .changeLeft, .changeRight{
   width: 20px;
   height: 39px;
@@ -2111,6 +2114,8 @@ b{
   display: flex;
   justify-content: center;
   align-items: center;
+
+  text-align: center;
 
   border-radius: 10px;
 }
