--- a/src/styles/stylesAutumn.css
+++ b/src/styles/stylesAutumn.css
@@ -79,10 +79,10 @@
 }
 
 .chosenAppBg7 .animWord .words__letter {
-  animation: 1s showNewWord9 forwards;
+  animation: 1s showNewWordBg7 forwards;
 }
 
-@keyframes showNewWord9 {
+@keyframes showNewWordBg7 {
   0% {
     background-color: rgba(255, 255, 255, 0.85);
   }
