--- a/src/styles/stylesLocations.scss
+++ b/src/styles/stylesLocations.scss
@@ -13,6 +13,7 @@
 @import 'games';
 @import 'egypt';
 @import 'againSchool';
+@import 'byeAutumn';
 
 .locationOpened{
     overflow: auto !important;
