--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4286,4 +4286,16 @@ img, a {
   -webkit-user-drag: none;
 }
 
+#game {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  touch-action: none;
+  /* запрещает браузеру распознавать жесты */
+  -webkit-user-select: none;
+  user-select: none;
+}
+
 /*# sourceMappingURL=styles.css.map */
