--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -84,8 +84,11 @@ html, body {
   -ms-user-select: none;
   -moz-user-select: none;
   -webkit-user-select: none;
-  touch-action: manipulation;
+  touch-action: none;
   user-select: none;
+  overscroll-behavior-y: none;
+  /* отключает pull-to-refresh */
+  overflow: hidden;
 }
 
 .words, .action-block, .rules {
@@ -4296,6 +4299,9 @@ img, a {
   /* запрещает браузеру распознавать жесты */
   -webkit-user-select: none;
   user-select: none;
+  overscroll-behavior-y: none;
+  /* отключает pull-to-refresh */
+  overflow: hidden;
 }
 
 /*# sourceMappingURL=styles.css.map */
